package com.notifier_ms.dto;

public record MessageDataDto(long countryId, long sportModalityId, long medalId, long medalsWon) {
}
