package com.notifier_ms.dto;

public record SentMessageDto(String message) {
}
