package com.notifier_ms.dto;

public record UserFollowCountryDto(long userId, long countryId ) {
}
