package com.notifier_ms.dto;

public record UserUnfollowCountryDto(long userId, long countryId ) {
}
